@@ -1,3 +1,13 @@
+Mon Jul 26 13:01:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm.c (rb_thread_mark): should mark iseq itself other than normal
+	  iseq.  [ruby-dev:41880]
+
+Mon Jul 26 09:51:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm.c (rb_thread_mark): mark only self of normal iseqs, not
+	  nodes.  [ruby-dev:41874]
+
 Sun Aug  1 10:23:48 2010  Yusuke Endoh  <mame@tsg.ne.jp>
 
 	* lib/irb/init.rb (IRB.parse_opts): set VERBOSE to true when debug
